flux/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-svc
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: devops
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
